# homeostat

./: CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.prebuilt  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: deployment.md
docs/examples/: actuation-wires.yaml  perception.yaml
drafts/: perception-expected-return.yaml
src/: decide.rs  ha.rs  main.rs  mqtt.rs  state.rs
