[package]
name = "homeostat"
version = "0.1.0"
edition = "2021"
description = "Whole-house energy policy daemon for Home Assistant: decides heating, cooling and load-shedding from occupancy and Hydro-Quebec peak events"
license = "Apache-2.0"

[[bin]]
name = "homeostat"
path = "src/main.rs"

[dependencies]
anyhow = "1"
futures-util = "0.3"
rumqttc = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }
tokio-tungstenite = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
